[project]
name = "blog"
version = "0.1.0"
description = "A blog application"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.1.3",
    "black==24.8.0",
    "bleach==6.1.0",
    "cryptography>=41.0.0",
    "email-validator==2.2.0",
    "faker==25.9.1",
    "flake8==7.1.0",
    "flask==3.0.3",
    "flask-caching==2.3.0",
    "flask-limiter==3.7.0",
    "flask-login==0.6.3",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "gunicorn==22.0.0",
    "limits==3.13.0",
    "markdown==3.6",
    "mypy==1.10.0",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.8.2",
    "pygments==2.18.0",
    "pyotp==2.9.0",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "python-dotenv==1.0.1",
    "qrcode[pil]",
    "sqlalchemy==2.0.31",
    "structlog==24.1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py", "*_test.py"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
